--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,12 @@ body {
     padding: 6rem 4rem;
 }
 
+.nav__container {
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+}
+
 .navigation {
     display: flex;
     justify-content: center;
@@ -55,6 +61,7 @@ body {
 
 .navigation__link {
     transition: color 0.15s;
+    font-weight: 600;
 }
 
 .navigation__logo {
@@ -457,4 +464,124 @@ body {
     display: flex;
     gap: 2rem;
     color: #666;
+    align-items: start;
+    max-width: 1100px;
+}
+
+.form__container div {
+    flex: 1;
+}
+
+.form__contact-info-container {
+    display: flex;
+    gap: 0.5rem;
+}
+
+.form__element {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.form__text-field {
+    background-color: #2B3D4F;
+    border: none;
+    flex: 1;
+    padding: 1rem;
+    border-radius: 5px;
+    color: #ECF0F1;
+    font-weight: bold;
+    font-size: 1.1rem;
+}
+
+.form__text-field::placeholder {
+    color: #ecf0f19d;
+    font-weight: bold;
+    font-size: 1.1rem;
+}
+
+.form__message {
+    padding-bottom: 150px;
+}
+
+.form__button {
+    padding: 1rem;
+    color: #ECF0F1;
+    background-color: #E74C3C;
+    border: none;
+    font-size: 1.1rem;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+textarea {
+    resize: none;
+}
+
+footer {
+    background-color: #2B3D4F;
+}
+
+.footer__container {
+    display: flex;
+    gap: 12rem;
+    align-items: start;
+}
+
+.footer__left-container {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    align-items: start;
+    max-width: 400px;
+    flex: 1;
+}
+
+.footer__image {
+    width: 175px;
+}
+
+.footer__description {
+    font-size: 0.8rem;
+    color: #a9adad;
+    font-weight: 300;
+    line-height: 1.25rem;
+}
+
+.footer__copyright {
+    font-weight: bold;
+    font-size: 0.9rem;
+}
+
+.footer__creator-tag {
+    color: #a9adad;
+    transition: color 0.15s;
+}
+
+.footer__creator-tag:hover {
+    color: #E74C3C;
+}
+
+.footer__right-container {
+    display: flex;
+    justify-content: start;
+    flex: 1;
+    gap: 4rem;
+}
+
+.footer__links-title {
+    font-size: 0.9rem;
+    color: #a9adad;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.footer__links-container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.footer__email-icon {
+    margin-right: 0.5rem;
 }
