--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,11 @@
 @font-face {
-  font-family: "Lexend";
-  src: url("./font/Lexend-Light.ttf") format("truetype");
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
+    font-family: "Lexend";
+    src: url("./font/Lexend-VariableFont_wght.ttf") format("truetype");
+    font-weight: 300 700;
+    font-style: normal;
+    font-display: swap;
 }
 
-@font-face {
-  font-family: "Lexend";
-  src: url("./font/Lexend-Regular.ttf") format("truetype");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Lexend";
-  src: url("./font/Lexend-Medium.ttf") format("truetype");
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Lexend";
-  src: url("./font/Lexend-SemiBold.ttf") format("truetype");
-  font-weight: 600;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Lexend";
-  src: url("./font/Lexend-Bold.ttf") format("truetype");
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
 
 * {
     margin: 0;
