--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Lexend";
-    src: url("./font/Lexend-VariableFont_wght.ttf") format("truetype");
+    src: url("./font/Lexend-Variable.ttf") format("truetype");
     font-weight: 300 700;
     font-style: normal;
     font-display: swap;
