--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ body {
 .nav__container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 70%;
 }
 
@@ -521,6 +522,7 @@ body {
     font-size: 1.1rem;
     font-weight: bold;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 textarea {
