misc: Add some responsive elements

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
     font-display: swap;
 }
 
-
 * {
     margin: 0;
     padding: 0;
@@ -83,14 +82,19 @@ body {
     color: #E74C3C;
 }
 
+a {
+    white-space: nowrap;
+}
+
 .cta-button {
     padding: 1rem 2rem;
     border-radius: 5px;
     background-color: #FF9900;
     text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.47);
     transition: padding 0.15s, font-size 0.15s;
-    display: inline-block;
+    display: block;
     transition: transform 0.15s;
+    text-align: center;
 }
 
 .cta-button:hover {
@@ -154,6 +158,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
     gap: 4.5rem;
 }
 
@@ -481,7 +486,7 @@ body {
     max-width: 1100px;
 }
 
-.form__container div {
+.form__container-left {
     flex: 1;
 }
 
@@ -490,21 +495,26 @@ body {
     gap: 0.5rem;
 }
 
+.form__container-right {
+    flex: 2;
+}
+
 .form__element {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    width: 100%;
 }
 
 .form__text-field {
     background-color: #2B3D4F;
     border: none;
-    flex: 1;
     padding: 1rem;
     border-radius: 5px;
     color: #ECF0F1;
     font-weight: bold;
     font-size: 1.1rem;
+    width: 100%;
 }
 
 .form__text-field::placeholder {
@@ -530,6 +540,7 @@ body {
 
 textarea {
     resize: none;
+    width: 100%;
 }
 
 footer {
@@ -602,6 +613,11 @@ footer {
     align-items: center;
 }
 
+.meeting-button {
+    cursor: pointer;
+    margin-top: 2rem;
+}
+
 /* ====== Tablet Styles ====== */
 @media (min-width: 600px) and (max-width: 1023px) {
     .services__cards-container {
@@ -621,12 +637,61 @@ footer {
         align-items: center;
     }
 
+    .form__container-right {
+        width: 100%;
+    }
+
     .form__contact-info-container {
         flex-direction: column;
+    }
+
+    .footer__container {
+        flex-direction: column-reverse;
+        gap: 5rem;
     }
 }
 
 /* ====== Phone Styles ====== */
 @media (max-width: 599px) {
+    .header__buttons-container {
+        flex-direction: column;
+    }
 
+    .services__cards-container {
+        flex-direction: column;
+    }
+
+    .development__steps-container {
+        flex-direction: column;
+    }
+
+    .about__container {
+        flex-direction: column-reverse;
+    }
+
+    .about__info-container {
+        display: flex;
+        align-items: center;
+        text-align: center;
+        gap: 2rem;
+    }
+
+    .form__container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer__container {
+        flex-direction: column-reverse;
+        gap: 5rem;
+    }
+
+    .footer__right-container {
+        flex-direction: column;
+    }
+
+    .container {
+        width: 90%;
+        padding: 5rem 3rem;
+    }
 }
