idfk: Have to save

--- a/src/index.njk
+++ b/src/index.njk
@@ -7,13 +7,12 @@ layout: "base.njk"
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewpornpm st" content="width=device-width, initial-scale=1.0">
 <title>Web Design Company for Small Businesses | JAR Webforge</title>
 <meta name="title" content="JAR Webforge – Custom Websites for Your Business">
 <meta name="description" content="Affordable custom website design and SEO services for small businesses. JAR Webforge builds websites that attract customers and grow your business.">
 <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
 <noscript><link rel="stylesheet" href="styles.css"></noscript>
-<link rel="preload" href="./font/Lexend-Variable.ttf" as="font" type="font/ttf" crossorigin>
 #}
 <script type="text/javascript">
     (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if(typeof namespace === "string"){cal.ns[namespace] = cal.ns[namespace] || api;p(cal.ns[namespace], ar);p(cal, ["initNamespace", namespace]);} else p(cal, ar); return;} p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
@@ -221,33 +220,3 @@ layout: "base.njk"
         </div>
     </div>
 </div>
-<footer>
-    <div class="footer__container container">
-        <div class="footer__left-container">
-            <a href="#"><img src="./assets/images/jar_webforge.webp" alt="JAR Webforge - Web Design Company for Small Businesses" class="footer__image" loading="lazy"></a>
-            <p class="footer__description">
-                JAR Webforge is a web design company for small businesses. We build affordable, custom websites with SEO that help you grow online.
-            </p>
-            <a href="#meet" class="cta-button">Book a call</a>
-            <p class="footer__copyright">&copy; 2025 by <a href="#" class="footer__creator-tag">JAR WEBFORGE</a></p>
-        </div>
-        <div class="footer__right-container">
-            <div class="footer__browse-container">
-                <ul class="footer__links-container">
-                    <li class="footer__links-title">BROWSE</li>
-                    <li class=""><a href="./index.html" class="navigation__link">Home</a></li>
-                    <li class=""><a href="./blog.html" class="navigation__link">Blog</a></li>
-                    <li class=""><a href="./about.html" class="navigation__link">About</a></li>
-                    <li class=""><a href="./services.html" class="navigation__link">Services</a></li>
-                </ul>
-            </div>
-            <div class="footer__contact-container">
-                <ul class="footer__links-container">
-                    <li class="footer__links-title">CONTACT</li>
-                    <li class="footer__email"><img src="./assets/icons/mail-icon.png" alt="Envelope icon"><a href="mailto:ruiz07014@gmail.com" class="navigation__link" loading="lazy">ruiz07014@gmail.com</a></li>
-                    <li class="footer__email"><img src="./assets/icons/phone-icon.png" alt="Envelope icon"><a href="tel:7038624896" class="navigation__link" loading="lazy">(703) 862-4896</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</footer>
