--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Lexend";
-    src: url("./font/Lexend-Variable.ttf") format("truetype");
+    src: url("/assets/font/Lexend-Variable.ttf") format("truetype");
     font-weight: 300 700;
     font-style: normal;
     font-display: swap;
@@ -638,6 +638,69 @@ footer {
     border-radius: 5px;
 }
 
+.blog__container {
+    display: flex;
+    flex-direction: column;
+    padding: 10rem 0;
+    gap: 5rem;
+}
+
+.blog__title a,
+.blog__item,
+.blog__item span {
+    color: #333;
+}
+
+.blog__title a:hover {
+    color: #666;
+}
+
+.blog__item {
+    display: flex;
+    align-items: center;
+    gap: 4rem;
+    width: 100%;
+    max-width: 865px;
+}
+
+.blog__information {
+    display: flex;
+    flex-direction: column;
+    gap: 0.9rem;
+    max-width: 500px;
+    align-items: start;
+}
+
+.blog__button {
+    padding: 0.75rem 1rem;
+    background-color: #5E8BB8;
+    border-radius: 5px;
+    transition: background-color 0.15s;
+}
+
+.blog__button:hover {
+    background-color: #3e5c7a;
+}
+
+.blog__creation-info {
+    color: #666;
+}
+
+.blog__img-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.blog__img {
+    width: 100%;
+    max-width: 300px;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+    border-radius: 8px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
 
 /* ====== Shared styles for <= 1023px ====== */
 @media (max-width: 1023px) {
@@ -748,5 +811,15 @@ footer {
     align-items: center;
     text-align: center;
     gap: 2rem;
+  }
+
+  .blog__item {
+    flex-direction: column-reverse;
+    gap: 2rem;
+  }
+
+  .blog__information {
+    align-items: center;
+    text-align: center;
   }
 }
