--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
-    <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="/styles.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="/assets/font/Lexend-Variable.ttf" as="font" type="font/ttf" crossorigin>
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -19,7 +20,10 @@
 
 <body>
     {% include "navigation.njk" %}
-    {{ content | safe }}
-    <script src="script.js"></script>
+    <main>
+        {{ content | safe }}
+    </main>
+    {% include "footer.njk" %}
+    <script src="/script.js"></script>
 </body>
 </html>
