--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -6,7 +6,7 @@
     <div class="navigation__right">
       <ul class="navigation__links-container" id="navBar">
         <li><a href="/" class="navigation__link">Home</a></li>
-        <li><a href="/blog.html" class="navigation__link">Blog</a></li>
+        <li><a href="/blog/" class="navigation__link">Blog</a></li>
         <li><a href="/about.html" class="navigation__link">About</a></li>
         <li><a href="/services.html" class="navigation__link">Services</a></li>
         <li><a href="#meet" onclick="toggleResponsiveNav()" class="cta-button">Book a call</a></li>
