--- a/src/_includes/article.njk
+++ b/src/_includes/article.njk
@@ -1,3 +1,18 @@
 ---
 layout: "base.njk"
 ---
+
+<article class="article">
+    <div class="article__container container">
+        <div class="article__information">
+            <h1 class="article__title">{{ title }}</h1>
+            <p class="blog__creation-info">by <span>{{ author }}</span> on <span>{{ date | postDate }}</span></p>
+        </div>
+        <figure class="article__figure">
+            <img src="{{ image }}" alt="{{ imageAlt }}" class="article__img">
+            <figcaption>{{ imageAlt }}</figcaption>
+        </figure>
+
+        {{ content | safe }}
+    </div>
+</article>
