--- a/src/styles.css
+++ b/src/styles.css
@@ -701,6 +701,34 @@ footer {
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
+.article {
+    background-color: #ECF0F1;
+    color: #333;
+}
+
+.article__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    padding: 8rem 0;
+    max-width: 900px;
+}
+
+.article__information {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    align-items: center;
+}
+
+.article__img {
+  width: 100%;
+  max-width: 600px;
+  height: 400px;
+  object-fit: cover;
+  border-radius: 2px; 
+}
 
 /* ====== Shared styles for <= 1023px ====== */
 @media (max-width: 1023px) {
