--- a/src/blog.njk
+++ b/src/blog.njk
@@ -3,22 +3,14 @@ title: Blog
 layout: "base.njk"
 ---
 
-<div class="blog">
-    <div class="blog__container container">
-        <h1 class="section__title">Recent Articles</h1>
+<div class="blog__page">
+    <div class="blog__page-container container">
+        <h1 class="section__title">Blogs</h1>
         {# Loop through each post tagged "post" #}
         {%- for post in collections.post | reverse -%}
-            <article class="blog__item">
-                <div class="blog__information">
-                    <h3 class="blog__title"><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
-                    <p class="blog__creation-info">by <span>{{ post.data.author }}</span> on <span>{{ post.data.date | postDate }}</span></p>
-                    <p class="blog__description">{{ post.data.description }}</p>
-                    <a href="{{ post.url }}" class="blog__button">Continue Reading</a>
-                </div>
-                <div class="blog__img-container">
-                    <img src="{{ post.data.image }}" alt="{{  post.data.imageAlt }}" class="blog__img">
-                </div>
-            </article>
+            
+            {% include "article-snippet.njk" %}
+
         {% endfor%}
     </div>
 </div>
