--- a/src/styles.css
+++ b/src/styles.css
@@ -331,6 +331,7 @@ a {
 
 .section__title-white {
     color: #ECF0F1;
+    text-align: center;
 }
 
 .quote-symbol {
@@ -375,7 +376,7 @@ a {
 }
 
 .about {
-    background-color: #ECF0F1;
+    background-color: #fff;
     color: #666;
 }
 
@@ -462,7 +463,7 @@ a {
 }
 
 .meet {
-    background-color: #ECF0F1;
+    background: radial-gradient(circle, rgba(94, 139, 184, 1) 0%, rgba(68, 100, 131, 1) 50%, rgba(44, 62, 80, 1) 100%);
 }
 
 .meet__container {
@@ -481,7 +482,8 @@ a {
 }
 
 .meet__subheading {
-    color: #666;
+    color: #d6d8d9;
+    font-size: 1.25rem;
 }
 
 .form__container {
@@ -638,7 +640,7 @@ footer {
     border-radius: 5px;
 }
 
-.blog__container {
+.blog__page-container {
     display: flex;
     flex-direction: column;
     padding: 10rem 0;
@@ -728,6 +730,27 @@ footer {
   height: 400px;
   object-fit: cover;
   border-radius: 2px; 
+}
+
+.blog {
+    background-color: #ECF0F1;
+}
+
+.blog__container {
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+}
+
+.blog__items-container {
+    display: flex;
+    gap: 3rem;
+    flex-direction: column;
+    color: #ECF0F1;
+}
+
+.blog__more-btn {
+    background-color: #E74C3C;
 }
 
 /* ====== Shared styles for <= 1023px ====== */
