fix: Update links in global elements

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -12,10 +12,10 @@
             <div class="footer__browse-container">
                 <ul class="footer__links-container">
                     <li class="footer__links-title">BROWSE</li>
-                    <li class=""><a href="./index.html" class="navigation__link">Home</a></li>
-                    <li class=""><a href="./blog.html" class="navigation__link">Blog</a></li>
-                    <li class=""><a href="./about.html" class="navigation__link">About</a></li>
-                    <li class=""><a href="./services.html" class="navigation__link">Services</a></li>
+                    <li class=""><a href="/index" class="navigation__link">Home</a></li>
+                    <li class=""><a href="/blog" class="navigation__link">Blog</a></li>
+                    <li class=""><a href="/about" class="navigation__link">About</a></li>
+                    <li class=""><a href="/services" class="navigation__link">Services</a></li>
                 </ul>
             </div>
             <div class="footer__contact-container">
