--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -9,7 +9,7 @@
         <li><a href="/blog/" class="navigation__link">Blog</a></li>
         <li><a href="/about.html" class="navigation__link">About</a></li>
         <li><a href="/services.html" class="navigation__link">Services</a></li>
-        <li><a href="#meet" onclick="toggleResponsiveNav()" class="cta-button">Book a call</a></li>
+        <li><a href="/index/#meet" onclick="toggleResponsiveNav()" class="cta-button">Book a call</a></li>
       </ul>
       <button type="button" onclick="toggleResponsiveNav()" class="navigation__hamburger-menu" aria-controls="navBar" aria-expanded="false">
         <img src="/assets/icons/hamburger-menu.png" alt="Menu" class="navigation__hamburger-menu-icon">
