misc: Update to EOS local changes

--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -7,8 +7,8 @@
       <ul class="navigation__links-container" id="navBar">
         <li><a href="/" class="navigation__link">Home</a></li>
         <li><a href="/blog/" class="navigation__link">Blog</a></li>
-        <li><a href="/about.html" class="navigation__link">About</a></li>
-        <li><a href="/services.html" class="navigation__link">Services</a></li>
+        <li><a href="/about/" class="navigation__link">About</a></li>
+        <li><a href="/services/" class="navigation__link">Services</a></li>
         <li><a href="/index/#meet" onclick="toggleResponsiveNav()" class="cta-button">Book a call</a></li>
       </ul>
       <button type="button" onclick="toggleResponsiveNav()" class="navigation__hamburger-menu" aria-controls="navBar" aria-expanded="false">
