--- a/src/index.njk
+++ b/src/index.njk
@@ -14,18 +14,7 @@ layout: "base.njk"
 <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
 <noscript><link rel="stylesheet" href="styles.css"></noscript>
 #}
-<script type="text/javascript">
-    (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if(typeof namespace === "string"){cal.ns[namespace] = cal.ns[namespace] || api;p(cal.ns[namespace], ar);p(cal, ["initNamespace", namespace]);} else p(cal, ar); return;} p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
-    Cal("init", "30min", {origin:"https://app.cal.com"});
 
-    
-    // Important: Please add the following attributes to the element that should trigger the calendar to open upon clicking.
-    // `data-cal-link="jarwebforge/30min"`
-    // data-cal-namespace="30min"
-    // `data-cal-config='{"layout":"month_view"}'`
-
-    Cal.ns["30min"]("ui", {"hideEventTypeDetails":false,"layout":"month_view"});
-</script>
 {#
 <script type="application/ld+json">
 {
@@ -56,7 +45,7 @@ layout: "base.njk"
     </div>
   </div>
 </header>
-<div class="services">
+<section class="services">
     <div class="services__container container">
         <h2 class="services__title section__title">Affordable Website Design Packages</h2>
         <div class="services__cards-container">
@@ -100,8 +89,8 @@ layout: "base.njk"
         </div>
         <a href="#meet" class="cta-button">Book Your Website Call</a>
     </div>
-</div>
-<div class="development">
+</section>
+<section class="development">
     <div class="development__container container">
         <h2 class="development__title section__title">Our Web Design Process</h2>
         <div class="development__steps-container">
@@ -122,8 +111,8 @@ layout: "base.njk"
             </div>
         </div>
     </div>
-</div>
-<div class="testimony">
+</section>
+<section class="testimony">
     <div class="testimony__container container">
         <h2 class="section__title section__title-white">Client Testimonial: Small Business Website Success</h2>
         <p class="quote-symbol">”</p>
@@ -137,8 +126,8 @@ layout: "base.njk"
             </div>
         </div>
     </div>
-</div>
-<div class="about" id="about">
+</section>
+<section class="about" id="about">
     <div class="about__container container">
         <div class="about__info-container">
             <h2 class="section__title">ABOUT</h2>
@@ -151,8 +140,8 @@ layout: "base.njk"
             <img src="./assets/images/computer_img.webp" alt="Computer and phone website demonstration" class="about__img" loading="lazy">
         </div>
     </div>
-</div>
-<div class="blog">
+</section>
+<section class="blog">
     <div class="blog__container container">
         <h2 class="blog__section-title section__title">Featured Blogs</h2>
         <div class="blog__items-container">
@@ -165,8 +154,8 @@ layout: "base.njk"
         </div>
         <a href="/blog" class="blog__more-btn cta-button">More blogs</a>
     </div>
-</div>
-<div class="faq">
+</section>
+<section class="faq">
     <div class="faq__container container">
         <h2 class="section__title">Web Design & Website Development FAQs</h2>
         <div class="faq__questions-container">
@@ -202,35 +191,5 @@ layout: "base.njk"
             </details>
         </div>
     </div>
-</div>
-<div class="meet" id="meet">
-    <div class="meet__container container">
-        <h2 class="section__title section__title-white">Contact</h2>
-        <div class="meet__subheading-container">
-            <p class="meet__subheading">Let's talk in real-time!</p>
-            <p class="meet__subheading">Go ahead and book a call.</p>
-            <a data-cal-link="jarwebforge/30min" class="cta-button meeting-button">Click here to schedule a call</a>
-        </div>
-        <div style="width:100%;height:100%;overflow:scroll" id="my-cal-inline-30min"></div>
-    </div>
-</div>
-<div class="form">
-    <div class="form__container container">
-        <div class="form__container-left">
-            <h2 class="section__title">Or send us a message.</h2>
-            <p class="form__description">
-                Let's communicate and explore your business needs together. We're here to listen, understand your unique situation, and tailor our solutions to help you thrive in the digital world. Reach out today to start the conversation!
-            </p>
-        </div>
-        <div class="form__container-right">
-            <form action="" class="form__element" name="contact" netlify>
-                <div class="form__contact-info-container">
-                    <input type="text" name="name" placeholder="Name" class="form__text-field">
-                    <input type="email" name="email" placeholder="Email" class="form__text-field">
-                </div>
-                <textarea name="message" type="text" placeholder="Message" class="form__text-field form__message" wrap="soft"></textarea>
-                <input type="submit" value="Send" class="form__button cta-button">
-            </form>
-        </div>
-    </div>
-</div>
+</section>
+{% include "cta-section.njk"%}
