feat: Change link to home page

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -6,7 +6,7 @@
                 JAR Webforge is a web design company for small businesses. We build affordable, custom websites with SEO that help you grow online.
             </p>
             <a href="#meet" class="cta-button">Book a call</a>
-            <p class="footer__copyright">&copy; 2025 by <a href="#" class="footer__creator-tag">JAR WEBFORGE</a></p>
+            <p class="footer__copyright">&copy; 2025 by <a href="/index" class="footer__creator-tag">JAR WEBFORGE</a></p>
         </div>
         <div class="footer__right-container">
             <div class="footer__browse-container">
