--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -6,6 +6,7 @@
     <title>{{ title }}</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="preload" href="/assets/font/Lexend-Variable.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="icon" href="/assets/icons/jwf-favicon.ico">
 </head>
 
 <!-- Google tag (gtag.js) -->
