--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/styles.css">
     <link rel="preload" href="/assets/font/Lexend-Variable.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="icon" href="/assets/icons/jwf-favicon.ico">
+    <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -26,5 +27,17 @@
     </main>
     {% include "footer.njk" %}
     <script src="/script.js"></script>
+
+    <script>
+        if (window.netlifyIdentity) {
+            window.netlifyIdentity.on("init", (user) => {
+            if (!user) {
+                window.netlifyIdentity.on("login", () => {
+                document.location.href = "/admin/";
+                });
+            }
+            });
+        }
+    </script>
 </body>
 </html>
