--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,12 @@
     font-family: Lexend, Arial, Helvetica, sans-serif;
 }
 
+@media (prefers-reduced-motion: no-preference) {
+  html {
+    interpolate-size: allow-keywords;
+  }
+}
+
 ul {
     list-style-type: none;
 }
@@ -438,6 +444,7 @@ a {
 .faq__item {
     background-color: #2B3D4F;
     border-radius: 5px;
+    transition: height 0.15s;
 }
 
 .faq__question {
