feat: Update responsiveness and page headers

--- a/src/about.njk
+++ b/src/about.njk
@@ -1,7 +1,8 @@
 ---
 title: About
 layout: "base.njk"
-pageHeader: "About us"
+pageHeaderTitle: "About Us"
+pageHeader: "About Jar Web Forge — Custom Web Design & SEO Built for Local Businesses"
 ---
 
 <div class="about__page">
