--- a/src/blog.njk
+++ b/src/blog.njk
@@ -1,7 +1,8 @@
 ---
-title: Blog
+title: Tips & Strategies to Grow Your Local Business Online
 layout: "base.njk"
-pageHeader: Blog
+pageHeaderTitle: Blog
+pageHeader: Tips & Strategies to Grow Your Local Business Online
 ---
 
 <div class="blog__page">
