--- a/src/services.njk
+++ b/src/services.njk
@@ -1,7 +1,8 @@
 ---
-title: Services
+title: Custom Web Design & Local SEO Services for Service Businesses
 layout: "base.njk"
-pageHeader: Services
+pageHeaderTitle: Services
+pageHeader: Custom Web Design & Local SEO Services for Service Businesses
 ---
 
 <div class="services__page">
