--- a/src/_includes/page-header.njk
+++ b/src/_includes/page-header.njk
@@ -1,5 +1,6 @@
 <header class="page__header">
     <div class="page__header-container container">
-        <h1 class="section__title">{{ pageHeader }}</h1>
+        <h2 class="page__header-title">{{ pageHeaderTitle }}</h2>
+        <h1 class="page__header-cta">{{ pageHeader }}</h1>
     </div>
 </header>
