--- a/src/styles.css
+++ b/src/styles.css
@@ -678,6 +678,7 @@ footer {
     gap: 0.9rem;
     max-width: 500px;
     align-items: start;
+    flex: 1;
 }
 
 .blog__button {
@@ -764,9 +765,24 @@ footer {
     background-color: #E74C3C;
 }
 
+.page__header-title {
+    color: #333;
+    font-size: 3rem;
+    text-transform: uppercase;
+    border-bottom: 3px solid #333;
+}
+
 .page__header {
     background-color: #ECF0F1;
     width: 100%;
+    text-align: center;
+}
+
+.page__header-cta {
+    font-size: 2.5rem;
+    color: #555;
+    text-align: center;
+    max-width: 1200px;
 }
 
 .page__header-container {
@@ -774,16 +790,14 @@ footer {
     padding: 4rem 0;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .about__page-container {
     display: flex;
     flex-direction: column;
     gap: 3rem;
-}
-
-.about__page h2 {
-    font-size: 2rem;
 }
 
 .about__page-img {
@@ -893,6 +907,10 @@ footer {
   .footer__container {
     gap: 5rem;
   }
+
+  .blog__item {
+    flex-direction: column-reverse;
+  }
 }
 
 /* ====== Phone-only styles (<= 599px) ====== */
@@ -915,6 +933,7 @@ footer {
     font-size: 2.5rem;
     line-height: 2.75rem;
     margin-bottom: 2rem;
+    margin-top: 3rem;
   }
 
   .about__info-container {
@@ -925,12 +944,40 @@ footer {
   }
 
   .blog__item {
-    flex-direction: column-reverse;
     gap: 2rem;
   }
 
   .blog__information {
-    align-items: center;
-    text-align: center;
+    width: 100%;
+  }
+
+  .blog__title a {
+    text-wrap-mode: wrap;
+  }
+
+  .page__header-title {
+    font-size: 2.5rem;
+  }
+
+  .page__header-cta {
+    font-size: 2rem;
+  }
+
+  .blog__page-container {
+    padding: 4rem 0.5rem;
+  }
+
+  .meet__subheading-container  {
+    width: 100%;
+  }
+
+  .cta-button {
+    width: 100%;
+    text-wrap-mode: wrap;
+    font-size: 1rem;
+  }
+
+  .container { 
+    padding: 3rem 1rem;
   }
 }
