feat: Update landing page h1

--- a/src/index.njk
+++ b/src/index.njk
@@ -37,10 +37,10 @@ layout: "base.njk"
 
 <header class="header">
   <div class="header__content container">
-    <h1 class="header__title">Custom Web Design for Small Businesses – A Website That’s Truly <span class="header__title-yours">Yours</span>.</h1>
-    <p class="header__subtext">Built in real code so you own it outright — no subscriptions, no hidden fees, no lock-ins.</p>
+    <h1 class="header__title">Get your website live <span class="header__title-yours">fast</span>.</h1>
+    <p class="header__subtext">Modern websites, fully owned by you, ready in days</p>
     <div class="header__buttons-container">
-      <a href="#meet" class="cta-button">Get Started Today</a>
+      <a href="#meet" class="cta-button">Let's work together</a>
       <a href="#about" class="header__button-learn-more">Learn More</a>
     </div>
   </div>
