feat: Update design process

--- a/src/index.njk
+++ b/src/index.njk
@@ -97,17 +97,26 @@ layout: "base.njk"
             <div class="development__step">
                 <p class="development__step-number">#1</p>
                 <p class="development__step-title">Discovery Call</p>
-                <p class="development__step-description">We jump into a phone/Zoom call and we get discussing about your business and what you need from your website at this moment. Understanding your business, what your goals are, and the way you want your website to represent your business is key.</p>
+                <p class="development__step-description">Let's talk and let us learn more about your business and goals.</p>
             </div>
             <div class="development__step">
                 <p class="development__step-number">#2</p>
-                <p class="development__step-title">Starting Development</p>
-                <p class="development__step-description">We begin to build the website with the agreed upon specifications, and we obtain content (images, videos, copy) from the client. Once website is nearly completed, Google Business Profile will be optimized to be in sync with the content on the website and other minor tweaks as needed.</p>
+                <p class="development__step-title">Quick prototype & design</p>
+                <p class="development__step-description">Together we agree on an idea and overall optimized implementation to meet your goals.</p>
             </div>
             <div class="development__step">
                 <p class="development__step-number">#3</p>
-                <p class="development__step-title">Revisions and Launch</p>
-                <p class="development__step-description">Client is sent a link to the website before it has been launched. Here, client is allowed to give feedback and make some changes that they wish to have on their website. Once everything has been adjusted to their needs, we move onto making the site public.</p>
+                <p class="development__step-title">Client feedback</p>
+                <p class="development__step-description">
+                    Have any questions, concerns, or something is missing from the site? We work together to make sure you're onboard before going live.
+                </p>
+            </div>
+            <div class="development__step">
+                <p class="development__step-number">#3</p>
+                <p class="development__step-title">Launch</p>
+                <p class="development__step-description">
+                    Your website is deployed and your clients can now find you online! The website is transfered to you or we handle it for as long as you opt in for the monthly maintenance plan.
+                </p>
             </div>
         </div>
     </div>
